test/test-files/analyzer/functions/error-return-without-value-result/exception.out
Semantic error in : ./test-files/analyzer/functions/error-return-without-value-result/source.spice:4:9:
Return without initialization of result variable: Return without value, but result variable is not initialized yet

return;
^^^^^^